Remove dependency on Jersey